--- a/requirements.txt
+++ b/requirements.txt
@@ -10,8 +10,8 @@ matplotlib>=1.4.3
 pandas>=0.19
 flasgger==0.9.4
 Cython>= 0.28.5
-Python (>= 3.6),
-SciPy (>= 0.19.1),
-Joblib (>= 0.11),
+Python (>= 3.6)
+SciPy (>= 0.19.1)
+Joblib (>= 0.11)
 threadpoolctl (>= 2.0.0).
 streamlit
