--- a/requirements.txt
+++ b/requirements.txt
@@ -13,5 +13,5 @@ Cython>= 0.28.5
 Python (>= 3.6)
 SciPy (>= 0.19.1)
 Joblib (>= 0.11)
-threadpoolctl (>= 2.0.0).
+threadpoolctl (>= 2.0.0)
 streamlit
